<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <FrameLayout
            android:id="@+id/banner_layout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_login_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/login_banner_content_description"
                android:scaleType="fitXY"
                android:src="@drawable/login_banner"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/iv_company_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/github_logo"
                tools:srcCompat="@tools:sample/avatars" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textColor="#6dffbf"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_header">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/user_name_hint"
                android:hint="@string/user_name_hint"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                tools:text="abc@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_github_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_login_title"
            android:textAllCaps="true"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/til_login_email" />

        <ProgressBar
            android:id="@+id/simpleProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:indeterminate="true"
            android:max="100"
            android:padding="20dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>